--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Demo video-events-debugger</title>
+    <title>video-events-debugger demo</title>
 </head>
 <body>
 <main>
     <video src="./media/big-buck-bunny-trailer-480p.mp4" width="480px" height="320px" controls></video>
 </main>
+<div class="description">
+    <p>Please see your developer console</p>
+</div>
+<fotter>
+    <ul>
+        <li>Bookmarklet: <a href="./build/bookmarklet.js">video-events-debugger</a> - please bookmark it.</li>
+    </ul>
+</fotter>
 <script src="./build/bundle.js"></script>
 </body>
 </html>
